--- a/bxyz-master/templates/str_content/objects_fills.html
+++ b/bxyz-master/templates/str_content/objects_fills.html
@@ -5,7 +5,7 @@
 {%block content%}
     {%load static%}
     
-    <script type="text/javascript" src="{%static 'js/jquery/dwd.js'%}"></script>
+    <script type="text/javascript" src="{%static 'js/jquery/basc.js'%}"></script>
 
     <script type="text/javascript" src="{%static 'js/jquery/lazy.js'%}"></script>
     
